fix: button responsive, fix view myProjects on mobile screens

--- a/src/Components/HomeBody/Contact/ContactForm.module.scss
+++ b/src/Components/HomeBody/Contact/ContactForm.module.scss
@@ -27,6 +27,10 @@
     gap: 0.5rem;
     width: 60%;
 
+    @media (max-width: 480px) {
+      width: 75%;
+    }
+
     .input {
       height: 2rem;
       font-size: 1em;
@@ -52,6 +56,10 @@
       text-transform: uppercase;
       font-family: 'Courier New';
 
+      @media (max-width: 480px) {
+        font-size: 1.2em;
+        width: 45%;
+      }
       &:hover {
         background: rgb(192, 179, 179);
         transition: 1s;
