--- a/src/Components/HomeBody/Contact/ContactLeftSide.module.scss
+++ b/src/Components/HomeBody/Contact/ContactLeftSide.module.scss
@@ -24,6 +24,11 @@
     font-family: 'Courier New';
     font-size: 1.3em;
     font-weight: bold;
+
+    @media (max-width: 480px) {
+      margin: 1rem 0;
+      padding: 20px;
+    }
   }
 
   .divBtn {
@@ -31,7 +36,7 @@
     .findMe {
       font-size: 1.2em;
       font-weight: bold;
-      margin: 1rem 0;
+      margin: 1rem;
       font-family: 'Courier New';
     }
 
